# Python_DataScience

./: .gitignore  README.md  pyproject.toml
LessonNotebooks/2.Numpy_Pandas_Introduction/: columns.ipynb  displaying_dataframe.ipynb  index.ipynb  operations_Dataframe.ipynb
LessonNotebooks/3. Filtering Data/: create_columns_based_on_conditions.ipynb  create_conditional_columns.ipynb  duplicated_method.ipynb  on_a_condition.ipynb
LessonNotebooks/3.FilteringData/: create_conditional_columns.ipynb  duplicated_method.ipynb  isin_method.ipynb  on_a_condition.ipynb
LessonNotebooks/4.DataExtraction/: applyMethod.ipynb  copyMethod.ipynb  dropRows&Columns.ipynb  newValueForCell.ipynb  queryMethod.ipynb  randomSample.ipynb  settingIndex_selectingColumns.ipynb
LessonNotebooks/5.Pivoting/: note.txt  pivot.py
LessonNotebooks/6.AggregateFunctions/: GroupBy&Aggregates.ipynb
LessonNotebooks/7.Merging&Concatenating/: concatenations.ipynb
LessonNotebooks/8.RegularExpression/: List&UsefulSite
Projects/1.WebScraping/: web_scraper.ipynb
Projects/2.Static&InteractiveVisualization/: Boxplot&Histograms.ipynb  DatasetOverview&Reshaping.ipynb  InteractiveVisualization.ipynb  Matplotlib.ipynb
data/GDP_Data/: notes.txt
modules/2.Numpy_Pandas_Introduction/: displaying_dataframe.ipynb  operations_Dataframe.ipynb
modules/datascience_course.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modules/reader_tools/: GenericCSVReader.py
script/basic/: hello_world.ipynb  variables_type.ipynb
script/basics/: modules.ipynb  variables_type.ipynb
utilities/: notes.txt
(+11 files in other folders)
