[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datascience_course"          
version = "0.0.1"
requires-python = ">=3.10"
description = "Utilities for DS notebooks (readers, tools)"
authors = [{ name = "Giacomo Da Re" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["modules"]            
